Fix in Jenkinspipeline to run validations